plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'br.com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("org.springframework.boot:spring-boot-starter-security:3.4.3")

	// Lombok (compileOnly para evitar conflitos em tempo de execução)
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// H2 Database para testes
	runtimeOnly 'com.h2database:h2'

	// Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// OpenAPI - SpringDoc
	implementation("org.springdoc:springdoc-openapi-starter-common:2.1.0")
	implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0")

	// MapStruct
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.6.3'
	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.6.3'

	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'

	implementation 'software.amazon.awssdk:s3:2.20.53'  // SDK v2 para interagir com o S3

	implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'

	implementation group: 'commons-io', name: 'commons-io', version: '2.18.0'

	implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'

	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'

	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
	options.annotationProcessorPath = configurations.annotationProcessor
}
